--- a/libs/jade/dev/site/webchat-offline-2.jade
+++ b/libs/jade/dev/site/webchat-offline-2.jade
@@ -19,20 +19,19 @@ block script
 	script.
 		// Click #chat-button
 		$(document).ready(function() {
-			$('#chat-button').on('click', function(){
-				/*if ($('#chat-button').hasClass("active")) {
-					$('#chat-advice').slideUp('fast');
-				}
-				$(this).toggleClass("active");
-				console.log('troll');*/
+			$('#live-chat_show').on('click', function(){
 				$(this).hide();
-				$('#chat-advice').show();
+				$('#live-chat').show();
+				var $cont = $('#live-chat_chat');
+				$cont[0].scrollTop = $cont[0].scrollHeight;
 			});
-			$('#chat-button-close').on('click', function(){
-				$('#chat-advice').hide();
-				$('#chat-button').show();
+			$('#live-chat_hide').on('click', function(){
+				$(this).parent().hide();
+				$('#live-chat_show').show();
 			});
 		});
+		var $cont = $('#live-chat_chat');
+		$cont[0].scrollTop = $cont[0].scrollHeight;
 
 block content
 	.articleContent
@@ -131,21 +130,17 @@ block content
 				a.a-social-google-plus(href="https://plus.google.com/share?url=", data-track="Google+", rel="external") Google Plus
 				a.a-social-whatsapp.show-mobile(href="javascript:window.location='whatsapp://send?text='+encodeURIComponent(location.href);") Whatsapp
 
-	#chat-button.advice-chat--offline(aria-checked="true" tabindex="0" role="button" style="cursor: pointer;")
-		p.icon-chat--offline Chat is unavailable
-
-	#chat-advice.advice-chat--offline.advice-chat--session
-		//h3 Webchat
-		p#chat-button-close(style="cursor: pointer;") Close
-		h3(style="margin-top: 0;") Other ways to get advice
-		ul(style="margin-top: 0;")
-			li #[a(href="#") Check webchat hours]
-			li #[a(href="#") Consumer helpline]
-
-		fieldset
-			label(for="search") Search for a local Citizens Advice
-			.search-results__field.field-group.field-group--buttons
-				input(type="search", placeholder="Enter town or postcode")
-				button.btn.btn-primary(style="background-color:#fcbb69;border: 2px solid #fcbb69;")
-					i.icon-search
-
+	#live-chat_show.offline Chat is unavailable
+	#live-chat.offline
+		#live-chat_hide Close
+		#live-chat_body
+			p Chat is currently unavailable.
+			//h3(style="margin-top: 0;") Other ways to get advice
+			p If you need help with a problem now, #[a contact your nearest Citizens Advice], or the #[a Citizens Advice consumer helpline] on #[strong 03454 04 05 06].
+			p Is there anything wrong with this page? #[a#feedback-link Let us know].
+			fieldset
+				label(for="search") Search for a local Citizens Advice
+				.search-results__field.field-group.field-group--buttons
+					input(type="search", placeholder="Enter town or postcode")
+					button.btn.btn-primary(style="background-color:#fcbb69;border: 2px solid #fcbb69;margin-top:0;")
+						i.icon-search
