--- a/libs/modules/side-chat.less
+++ b/libs/modules/side-chat.less
@@ -124,6 +124,8 @@
 		padding: @box-spacing/2;
 		cursor: pointer;
 		background-color: @green-lighter;
+		border: solid @green-light;
+		border-width: 2px 2px 0 2px;
 		&:after {
 			.icon;
 			content: @i-down;
@@ -138,18 +140,42 @@
 		background-color: @gray-7;
 		padding: @box-spacing/2;
 		position: relative;
+		border: solid @gray-6;
+		border-width: 0 2px;
 		strong {
 			color: @heritage-blue;
-		}
-		#live-chat_end {
-			float: right;
-			.vertical-align(absolute);
-			right: 0;
-			top: 35%;
+			@-webkit-keyframes opacity {
+			    0% { opacity: 1; }
+			    100% { opacity: 0; }
+			}
+			@-moz-keyframes opacity {
+			    0% { opacity: 1; }
+			    100% { opacity: 0; }
+			}
+			span {
+			    -webkit-animation-name: opacity;
+			    -webkit-animation-duration: 1s;
+			    -webkit-animation-iteration-count: infinite;
+			    -moz-animation-name: opacity;
+			    -moz-animation-duration: 1s;
+			    -moz-animation-iteration-count: infinite;
+			}
+			span:nth-child(1) {
+			    -webkit-animation-delay: 100ms;
+			    -moz-animation-delay: 100ms;
+			}
+			span:nth-child(2) {
+			    -webkit-animation-delay: 300ms;
+			    -moz-animation-delay: 300ms;
+			}
+			span:nth-child(3) {
+			    -webkit-animation-delay: 500ms;
+			    -moz-animation-delay: 500ms;
+			}
 		}
 	}
 	#live-chat_body {
-		border: solid @gray-7;
+		border: solid @gray-6;
 		border-width: 0 2px;
 		height: 100%;
 		background-color: @gray-7;
@@ -171,6 +197,9 @@
 				padding-top: @box-spacing/2;
 				margin-top: @box-spacing/2;
 				border-top: 1px solid @gray-7;
+			}
+			.advise {
+				color: @heritage-blue;
 			}
 			.timestamp {
 				font-size: @font-size-small*.85;
@@ -201,6 +230,26 @@
 			}
 		}
 	}
+	&.offline {
+		#live-chat_hide {
+			background-color: @gray-7;
+			border-color: @gray-6;
+			color: @gray-3;
+			&:after {
+				color: @gray-3;
+				content: @i-cross;
+			}
+			&:hover,
+			&:hover:after {
+				color: @black;
+			}
+		}
+		#live-chat_body {
+			padding: @box-spacing/2;
+			height: 100%;
+			background-color: @white;
+		}
+	}
 }
 
 #live-chat_show {
@@ -228,5 +277,22 @@
 	&:hover {
 		margin-bottom: 0;
 		transition: .1s ease-in-out;
+	}
+	&.new_live-chat {
+		background-color: @heritage-yellow-lighter;
+		border-color: @heritage-yellow;
+		&:after {
+			.icon;
+			content: @i-up;
+		}
+	}
+	&.offline {
+		background-color: @gray-7;
+		border-color: @gray-6;
+		color: @black;
+		&:after {
+			.i-brand;
+			content: @brand-dialogue_sad;
+		}
 	}
 }
