--- a/libs/dev/campaigns.less
+++ b/libs/dev/campaigns.less
@@ -4,10 +4,10 @@
 .twitter-button-icon {
     .btn-icon(@i-twitter);
     background-color: @heritage-blue-light;
-    border: @heritage-blue-light;
+    border-color: @heritage-blue-light;
 	    &:hover {
 	    	background-color: @heritage-blue-lighter;
-	    	border: @heritage-blue-lighter;
+	    	border-color: @heritage-blue-lighter;
 	    }
 }
 
@@ -17,7 +17,7 @@
     border-color: @green;
     	&:hover {
 	    	background-color: @green-light;
-	    	border: @green-light;
+	    	border-color: @green-light;
 	    }
 }
 
