--- a/libs/jade/dev/campaigns/campaigns.jade
+++ b/libs/jade/dev/campaigns/campaigns.jade
@@ -346,11 +346,11 @@ block content
 
     .fullwidth-gray
         .fullwidth-content
-            .flex-row                
+            .flex-row
                 .col-md-12
                     h2 Learn the facts before you buy again
                     p Many electrical goods are expensive, complicated, large and heavy. Do as much research as you can before buying - it might be inconvenient to return something like a washing machine after it’s arrived at your house.
-                    p #[a(href="#") Take a look at our 2015 Know your new rights campaign] for more information about how the Consumer Rights Act affects you.              
+                    p #[a(href="#") Take a look at our 2015 Know your new rights campaign] for more information about how the Consumer Rights Act affects you.
 
     .fullwidth
         .fullwidth-content
@@ -364,7 +364,7 @@ block content
                     h3 Look out for fakes
                     p Counterfeit electrical goods might not be made to the required standards, and they might be unsafe. Some commonly counterfeited electrical items are hair straighteners, mobile phone chargers, games consoles and e-cigarettes (sometimes called vapers).
 
-    .fullwidth-gray
+    //.fullwidth-gray
         .fullwidth-content
             .flex-row
                 .col-md-7
@@ -377,6 +377,21 @@ block content
                 .col-md-3
                     h3 #[a(href="#") Medium Post Title]
                     p  Parturient est quis adipiscing penatibus massa vestibulum ...
+
+    .medium
+        .medium-quote
+            .fullwidth-content
+                .wrapper
+                    h2 Parturient est quis adipiscing penatibus massa vestibulum ut at condimentum congue ad curabitur. Hac pharetra nam a adipiscing non id sed est faucibus ad a a purus adipiscing tortor ultricies a mi ante.
+        .medium-author
+            .fullwidth-content
+                .wrapper
+                    img(src="#{dir}images/campaigns/medium-avatar-square.png")
+                    p
+                        a.medium-title(href="#") Read Medium Post Title
+                        br
+                        span.small by #[a(href="#") James Plunkett]
+
     .fullwidth
         .fullwidth-content
             .flex-row
@@ -389,7 +404,7 @@ block content
                 .col-md-6
                     h3 Watch local Citizens Advice in action
                     p If you’d like an idea of how we work, watch this short film, made by our Consumer Empowerment Partnership of 5 local Citizens Advice, showing how they help clients with electrical goods problems.
-                .col-md-6    
+                .col-md-6
                     iframe(width='560', height='315', src='//www.youtube.com/embed/kJOVSfLnqwA?list=PLA56D3E70BE34B6BF', frameborder='0')
 
     .fullwidth-gray
@@ -398,7 +413,7 @@ block content
                .col-md-4
                .col-md-4
                     h3 Share this page
-               .col-md-4 
+               .col-md-4
             .flex-row.campaign-share
                 .col-md-4
                     h4 #consumerweek
