--- a/libs/jade/dev/campaigns/campaigns.jade
+++ b/libs/jade/dev/campaigns/campaigns.jade
@@ -407,7 +407,7 @@ block content
                 .col-md-6
                     iframe(width='560', height='315', src='//www.youtube.com/embed/kJOVSfLnqwA?list=PLA56D3E70BE34B6BF', frameborder='0')
 
-    .fullwidth-gray
+    //.fullwidth-gray
         .fullwidth-content
             .flex-row.campaign-share
                .col-md-4
@@ -425,3 +425,13 @@ block content
                     button.btn-secondary.email-button-icon email
                 .col-md-2
                     button.btn-secondary.copy-button-icon copy link
+
+    .sharing
+        .fullwidth-content
+            a.btn-white.sharing-button-icon_facebook Facebook
+            a.btn-white.sharing-button-icon_twitter Twitter
+            a.btn-white.sharing-button-icon_linkedin Linkedin
+            a.btn-white.sharing-button-icon_messenger Messenger
+            a.btn-white.sharing-button-icon_whatsapp Whatsapp
+            a.btn-white.sharing-button-icon_email Email
+            a.btn-white.sharing-button-icon_copy Copy
