--- a/libs/dev/campaigns.less
+++ b/libs/dev/campaigns.less
@@ -54,6 +54,14 @@
 	padding: 5em;
 }
 
+.story-masthead {
+	max-height: 80vh;
+	min-height: 15rem;
+	h1 {
+		margin-top: 0;
+	}
+}
+
 .medium {
 	.medium-quote {
 		background-color: @green-lighter;
@@ -95,6 +103,48 @@
 	@media screen and ( min-width: (@breakpoint-md) ) {
 		.wrapper {
 			padding: 0 5rem;
+		}
+	}
+}
+
+.twitter {
+	background-color: @heritage-blue-lightest;
+	.hashtag {
+		text-align: center;
+		h3 {
+			margin-top: 0;
+			margin-bottom: 1.5rem;
+		}
+	}
+	.tweet {
+		position: relative;
+		img {
+			width: 4rem;
+			height: 4rem;
+			border-radius: 50%;
+			position: absolute;
+			left: 0;
+		}
+		p {
+			padding-left: 5rem;
+			margin-bottom: .25rem;
+			a {
+				color: @green;
+			}
+			&.username {
+				font-size: @font-size-small;
+				font-weight: @font-weight-bold;
+				a {
+					color: @heritage-blue;
+					border: none;
+				}
+				&:before {
+					.icon;
+					color: @twitter-brand-colour;
+					content: @i-twitter;
+					margin-right: .25em;
+				}
+			}
 		}
 	}
 }
