--- a/libs/dev/campaigns.less
+++ b/libs/dev/campaigns.less
@@ -23,22 +23,19 @@
 
 .campaign-share {
 	text-align: center;
-}
-
-.campaign-share h4 {
-	font-size: 2.2em;
-	margin-top: 0.2em;
-    margin-bottom: 0.1em;
-}
-
-.campaign-share
-	.email-button-icon {
-	background-color: @gray-3;
-	border-color: @gray-3;
-		&:hover {
-	    	background-color: @gray-4;
-	    	border-color: @gray-4;
-	    }
+		h4 {
+			font-size: 2.2em;
+			margin-top: 0.2em;
+		    margin-bottom: 0.1em;
+		}
+		.email-button-icon {
+			background-color: @gray-3;
+			border-color: @gray-3;
+				&:hover {
+			    	background-color: @gray-4;
+			    	border-color: @gray-4;
+			    }
+		}
 }
 
 .medium-author {
@@ -51,21 +48,30 @@
 }
 
 .sil-image {
-	padding: 5em;
+	padding: 3rem;
+}
+
+.campaign-content {
+	@media screen and ( min-width: (@breakpoint-sm) ) {
+		.wrapper, .flex-row {
+			padding: 0 5rem;
+		}
+	}
 }
 
 .medium {
 	.medium-quote {
-		background-color: @heritage-yellow-lighter;
+		background-color: @green-lighter;
 		h2 {
 			position: relative;
 			margin: 0;
+			color: @gray-1;
 		}
 	}
 
 	.medium-author {
 		overflow: hidden;
-		background-color: @heritage-yellow-lightest;
+		background-color: @gray-7;
 		.fullwidth-content {
 			padding: .5rem 1rem;
 		}
